--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ body {
     justify-content: center;
     text-align: center;
     color: #ffffff;
+    gap: 50px;
 }
 
 
@@ -228,9 +229,13 @@ body {
     margin-top: 10px;
 }
 
+/* .features {
+    font-size: 48px;
+    font-weight: bold;
+    gap:    ;
+} */
 .feature-grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    display: flex;
     gap: 24px;
     max-width: 1100px;
     margin: 0 auto;
@@ -337,11 +342,11 @@ body {
     margin-bottom: 12px;
     font-size: 14px;
     color: #0f172a;
+    text-align: center;
 }
 
 .brain-content li::before {
-    content: "●";
-    position: absolute;
+    
     left: 0;
     color: #22c55e;
     font-size: 12px;
@@ -428,7 +433,7 @@ body {
 .footer-brand .logo {
     font-weight: 700;
     font-size: 18px;
-    color: #22c55e;
+    color: #22c55e; 
 }
 
 .footer-brand small {
@@ -466,10 +471,10 @@ body {
     font-size: 13px;
 }
 
-.icons a:hover {
+/* .icons a:hover {
     background: #22c55e;
     color: #022c22;
-}
+} */
 
 
 .divider {
